--- a/exercise6/README.me
+++ b/exercise6/README.me
@@ -1,5 +1,5 @@
-##Exercise 6 instructions
-#Product catalogue
+# Exercise 6 instructions
+## Product catalogue
 1. Go to the link https://github.com/robitussin/CCOBJPGL/tree/main/JavaFX/product_catalogue
 2. Create a new JavaFX project.
 3. Copy all contents in the link to the src folder of your JavaFX project.
